--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -146,7 +146,7 @@
     <div class="scroll__first">
       <div class="container">
         <div class="scroll__logo">
-          <img src="img/scroll-logo.png" alt="Forex24" width="200px">
+          <img src="img/scroll-logo.png" alt="Forex24" width="200px" height="180">
         </div>
       </div>
     </div>
