--- a/assets/templates/forex/sass/blocks/global.scss
+++ b/assets/templates/forex/sass/blocks/global.scss
@@ -58,7 +58,7 @@
   }
   
   .global__title {
-    padding-top: 110px;
+    padding-top: 120px;
   }
 }
 
@@ -80,7 +80,8 @@
   }
   
   .global__title {
-    font-size: 25px;
+    padding-top: 90px;
+    // font-size: 25px;
   }
   
   .global__list {
