--- a/assets/templates/forex/sass/blocks/scroll.scss
+++ b/assets/templates/forex/sass/blocks/scroll.scss
@@ -1,6 +1,6 @@
 .scroll__first {
   min-height: 470px;
-  background: url("../img/scroll-f.png") no-repeat top;
+  background: url("../img/scroll-t.png") no-repeat top;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -8,12 +8,12 @@
 .scroll__logo {
   display: flex;
   justify-content: flex-end;
-  padding: 145px 0;
+  padding: 140px 0;
 }
 
 .scroll__second {
   min-height: 470px;
-  background: url("../img/scroll-s-n.png") no-repeat top;
+  background: url("../img/scroll-s.png") no-repeat top;
   background-size: cover;
   background-attachment: fixed;
   
