--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -118,15 +118,17 @@
   </section>
   <section class="global">
     <div class="container">
-      <h2 class="global__title">Go Global</h2>
-      <p>Forex24 Global on your finger tips<br>Turn your smartphone into a sophisticated trading tool</p>
-      <ul class="global__list">
-        <li>User-friendly and Intuitive for Novices and Pros</li>
-        <li>Automatic Platform Auto-Update</li>
-        <li>Customizable Menus to Meet the Specific Needs of Our Clients</li>
-        <li>Touch-Friendly Technical indicators</li>
-      </ul>
-      <a href="#">START TRADING NOW</a>
+      <div class="global__box">
+        <h2 class="global__title">Go Global</h2>
+        <p>Forex24 Global on your finger tips<br>Turn your smartphone into a sophisticated trading tool</p>
+        <ul class="global__list">
+          <li>User-friendly and Intuitive for Novices and Pros</li>
+          <li>Automatic Platform Auto-Update</li>
+          <li>Customizable Menus to Meet the Specific Needs of Our Clients</li>
+          <li>Touch-Friendly Technical indicators</li>
+        </ul>
+        <a href="#">START TRADING NOW</a>
+      </div>
     </div>
   </section>
   <section class="trading">
@@ -168,15 +170,17 @@
     </div>
     <div class="scroll__second">
       <div class="container">
-        <h2 class="scroll__title">Go Global</h2>
-        <p>Capital Markets & Investment Banking</p>
-        <ul class="scroll__list">
-          <li>Multiple strategies</li>
-          <li>Corporate Banking & Risk Management</li>
-          <li>Precious Metal Trading & Warehousing</li>
-          <li>Real time insights</li>
-        </ul>
-        <a href="#">START TRADING NOW</a>
+        <div class="scroll__container">
+          <h2 class="scroll__title">Go Global</h2>
+          <p>Capital Markets & Investment Banking</p>
+          <ul class="scroll__list">
+            <li>Multiple strategies</li>
+            <li>Corporate Banking & Risk Management</li>
+            <li>Precious Metal Trading & Warehousing</li>
+            <li>Real time insights</li>
+          </ul>
+          <a href="#">START TRADING NOW</a>
+        </div>
       </div>
     </div>
   </section>
