--- a/assets/templates/forex/sass/blocks/scroll.scss
+++ b/assets/templates/forex/sass/blocks/scroll.scss
@@ -1,6 +1,6 @@
 .scroll__first {
   min-height: 470px;
-  background: url("../img/scroll-t.png") no-repeat top;
+  background: url("../img/scroll-f.png") no-repeat top;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -62,12 +62,18 @@
   
   & a {
     padding: 5px 15px;
-    color: white;
+    color: $mc;
     font-size: 12px;
     font-weight: bold;
-    background: $mc;
+    background: $sc;
     text-transform: uppercase;
-    text-decoration: none;
+    text-decoration: none;  
+    transition: 0.3s;
+    
+    &:hover {
+      color: #fff;
+      background: $mc;
+    }
   }
 }
 
@@ -99,6 +105,10 @@
     flex-direction: column;
   }
   
+  .scroll__logo {
+    justify-content: center;
+  }
+  
   .scroll__box {
     margin-bottom: 35px;
   }
@@ -107,9 +117,13 @@
     margin-bottom: 0;
   }
   
+  .scroll__container {
+    padding: 60px 0;
+  }
+  
   .scroll__second {
     min-height: 440px;
-    background: url("../img/scroll-s-n.png") no-repeat top;
+    background: url("../img/scroll-s.png") no-repeat top;
     background-size: cover;
     background-attachment: fixed;
     text-align: center;
@@ -117,7 +131,8 @@
     & p {
       margin-top: 0;
       color: #fff;
-      font-size: 17px;
+      font-size: 16px;
+      font-weight: bold;
     }
     
     & a {
@@ -131,11 +146,18 @@
   }
   
   .scroll__title {
-    font-weight: 700;
+    padding-top: 0;
+    font-size: 55px;
+    font-weight: bold;
   }
   
   .scroll__list {
+    margin: 0;
+    padding-top: 30px;
+    padding-bottom: 50px;
+    padding-left: 40px;
     font-size: 15px;
+    font-weight: bold;
     text-align: left;
   }
 }
