--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -218,6 +218,7 @@
           <a href="#" class="page-footer__linked">LinkedIn</a>
           <a href="#" class="page-footer__twitter">Twitter</a>
           <a href="#" class="page-footer__google">Google+</a>
+          <!-- <a href="#" class="page-footer__youtube">YouTube</a> -->
         </div>
       </div>
       <div class="page-footer__flex">
