--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -141,8 +141,26 @@
     <p class="sign__text">and get expert<br>analytics BY OUR LOWYERS</p>
     <input class="sign__input" type="email" placeholder="Enter your E-mail">
   </section>
-  <section class="center">
-    <h2>AUTOMATIC TRADING CENTER</h2>
+  <section class="adv">
+    <div class="container">
+      <div class="adv__flex">
+        <div class="adv__left">
+          <b>Low Spreads<br>& Competitive Pricing</b>
+          <img src="img/adv-1.png" alt="">
+          <p>Forex24 Global has very low spreads and a competitive pricing model for all trading accounts. This is possible by having a deep and varied liquidity pool with tier 1 banks and top finance institutional companies.</p>
+        </div>
+        <div class="adv__center">
+          <b>Transparent<br>& Trustworthy</b>
+          <img src="img/adv-2.png" alt="">
+          <p>As an STP (Straight Through Processing) broker, we do not have any conflict of interest regarding our clients’ trades, as we only receive commission on the volume of the trades and do not benefit in any additional way by any client losses. We aim to give you the best possible service to help boost your trading experience with us.</p>
+        </div>
+        <div class="adv__right">
+          <b>Safety<br>of Funds</b>
+          <img src="img/adv-3.png" alt="">
+          <p>Your funds are kept in segregated accounts and we use encryption tools to keep all of your transaction data safe and secure. The company offers Negative Balance Protection.</p>
+        </div>
+      </div>
+    </div>
   </section>
   <section class="scroll">
     <div class="scroll__first">
