--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -537,17 +537,33 @@ body {
   .sign__input {
     width: 80%; } }
 
-.center {
-  min-height: 800px;
-  background: url("../img/center-bg.png") center;
-  background-size: cover; }
-  .center h2 {
-    margin-top: 0;
-    margin-bottom: 0;
-    padding-top: 60px;
-    font-size: 30px;
-    font-weight: bold;
-    text-align: center; }
+.adv {
+  text-align: center; }
+  .adv b {
+    font-size: 20px; }
+  .adv img {
+    display: block;
+    margin: auto;
+    margin-top: 40px;
+    margin-bottom: 40px; }
+  .adv p {
+    margin: 0;
+    font-size: 14px;
+    opacity: 0.7; }
+
+.adv__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+  -ms-flex-pack: justify;
+  justify-content: space-between;
+  padding: 80px 0; }
+
+.adv__left,
+.adv__center,
+.adv__right {
+  width: 350px; }
 
 .scroll__first {
   min-height: 470px;
