--- a/assets/templates/forex/sass/style.scss
+++ b/assets/templates/forex/sass/style.scss
@@ -11,7 +11,7 @@
 @import 'blocks/global';
 @import 'blocks/trading';
 @import 'blocks/sign';
-@import 'blocks/center';
+@import 'blocks/adv';
 @import 'blocks/scroll';
 @import 'blocks/page-footer';
 
