--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -565,6 +565,24 @@ body {
 .adv__right {
   width: 350px; }
 
+@media screen and (max-width: 768px) {
+  .adv__flex {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    -webkit-box-align: center;
+    -ms-flex-align: center;
+    align-items: center;
+    padding: 50px 0; }
+  .adv__left,
+  .adv__center,
+  .adv__right {
+    width: auto; }
+  .adv__left,
+  .adv__center {
+    margin-bottom: 50px; } }
+
 .scroll__first {
   min-height: 470px;
   background: url("../img/scroll-f.png") no-repeat top;
