--- a/assets/templates/forex/sass/blocks/adv.scss
+++ b/assets/templates/forex/sass/blocks/adv.scss
@@ -30,3 +30,26 @@
 .adv__right {
   width: 350px;
 }
+
+@media screen and ($tablet-widths) {
+  
+}
+
+@media screen and ($mobile-widths) {  
+  .adv__flex {
+    flex-direction: column;
+    align-items: center;
+    padding: 50px 0;
+  }
+  
+  .adv__left,
+  .adv__center,
+  .adv__right {
+    width: auto;
+  }
+  
+  .adv__left,
+  .adv__center {
+    margin-bottom: 50px;
+  }
+}
