--- a/assets/templates/forex/sass/blocks/page-footer.scss
+++ b/assets/templates/forex/sass/blocks/page-footer.scss
@@ -87,6 +87,18 @@
   }
 }
 
+// .page-footer__youtube {
+//   padding-top: 5px;
+//   padding-bottom: 5px;
+//   padding-left: 30px;
+//   background: url("../img/yt.png") no-repeat left;
+//   transition: 0.3s;
+// 
+//   &:hover {
+//     background: url("../img/go-h.png") no-repeat left;
+//   }
+// }
+
 .page-footer__right-column--flex {
   display: flex;
   flex-wrap: wrap;
