--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -202,6 +202,9 @@
       </div>
     </div>
   </section>
+  <section class="payment">
+    <div class="payment__box"></div>
+  </section>
   <footer class="page-footer">
     <div class="container">
       <div class="page-footer__flex">
