--- a/assets/templates/forex/sass/style.scss
+++ b/assets/templates/forex/sass/style.scss
@@ -13,6 +13,7 @@
 @import 'blocks/sign';
 @import 'blocks/adv';
 @import 'blocks/scroll';
+@import 'blocks/payment';
 @import 'blocks/page-footer';
 
 // Template blocks
