add new trading block

--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -78,12 +78,12 @@
           <a href="#">Read More</a>
         </div>
         <div class="online__box">
-          <b>Invest with the best!</b>
-          <p>Discover and copy the top traders<br>from all over the world</p>
+          <b>Fintech since 2005</b>
+          <p>Pioneering financial technology provider,<br>focusing on B2B product development</p>
           <a href="#">Read More</a>
         </div>
         <div class="online__box">
-          <b>Invest with the best!</b>
+          <b>ALGO TRADING</b>
           <p>Discover and copy the top traders<br>from all over the world</p>
           <a href="#">Read More</a>
         </div>
@@ -104,13 +104,17 @@
         </div>
         <div class="slider__slide  online__slide--two">
           <div class="online__box  online__box--zulu">
-            <b>Invest with the best!</b>
-            <p>Discover and copy the top traders<br>from all over the world</p>
+            <b>Fintech since 2005</b>
+            <p>Pioneering financial technology provider,<br>focusing on B2B product development</p>
             <a href="#">Read More</a>
           </div>
         </div>
         <div class="slider__slide  online__slide--three">
-          
+          <div class="online__box  online__box--algo">
+            <b>ALGO TRADING</b>
+            <p>Discover and copy the top traders<br>from all over the world</p>
+            <a href="#">Read More</a>
+          </div>
         </div>
       </div>
       <!-- Slider off -->
@@ -134,6 +138,10 @@
   <section class="trading">
     <div class="container">
       <h2 class="trading__title">YOUR PERSONAL MULTYPLATFORM TRADING VEHICLE</h2>
+      <div class="trading__text">
+        <div class="trading__img"></div>
+        <p>MT4 is a world-wide renowned application which enables you to trade Forex, Commodities and Futures. It is suitable for beginner investors, but also for more experienced ones, because it is so thorough and easy to use. It`s, very intuitive and it informs you about all the latest developments in the trading field. Overall, the MT4 is the most popular and widely used Forex trading platform.</p>
+      </div>
     </div>
   </section>
   <section class="sign">
