--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -473,8 +473,7 @@ body {
     text-align: left; } }
 
 .trading {
-  min-height: 550px;
-  background: url("../img/trading-bg.png") no-repeat bottom; }
+  min-height: 550px; }
 
 .trading__title {
   margin-top: 60px;
@@ -483,6 +482,22 @@ body {
   font-size: 30px;
   background: #2e2963;
   text-align: center; }
+
+.trading__img {
+  width: 100%;
+  height: 430px;
+  background: url("../img/trading-bg.png") no-repeat;
+  background-size: cover; }
+
+.trading__text {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex; }
+  .trading__text p {
+    width: 600px;
+    padding-right: 100px;
+    text-align: center;
+    opacity: 0.7; }
 
 @media screen and (max-width: 1200px) {
   .trading__title {
