--- a/assets/templates/forex/sass/blocks/trading.scss
+++ b/assets/templates/forex/sass/blocks/trading.scss
@@ -1,6 +1,5 @@
 .trading {
   min-height: 550px;
-  background: url("../img/trading-bg.png") no-repeat bottom;
 }
 
 .trading__title {
@@ -10,6 +9,25 @@
   font-size: 30px;
   background: $mc;
   text-align: center;
+}
+
+.trading__img {
+  width: 100%;
+  height: 430px;
+  background: url("../img/trading-bg.png") no-repeat;
+  background-size: cover;
+}
+
+.trading__text {
+  display: flex;
+  // justify-content: flex-end;
+  
+  & p {
+    width: 600px;
+    padding-right: 100px;
+    text-align: center;
+    opacity: 0.7;
+  }
 }
 
 @media screen and ($tablet-widths) {
