--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -77,12 +77,12 @@
           <p>Discover and copy the top traders<br>from all over the world</p>
           <a href="#">Read More</a>
         </div>
-        <div class="online__box">
+        <div class="online__box  online__box--tradency">
           <b>Fintech since 2005</b>
           <p>Pioneering financial technology provider,<br>focusing on B2B product development</p>
           <a href="#">Read More</a>
         </div>
-        <div class="online__box">
+        <div class="online__box  online__box--algo">
           <b>ALGO TRADING</b>
           <p>Discover and copy the top traders<br>from all over the world</p>
           <a href="#">Read More</a>
