--- a/assets/templates/forex/sass/blocks/online.scss
+++ b/assets/templates/forex/sass/blocks/online.scss
@@ -58,6 +58,14 @@
   background: url('../img/online-1.png') no-repeat top;
 }
 
+.online__box--tradency {
+  background: url('../img/online-2.png') no-repeat top;
+}
+
+.online__box--algo {
+  background: url('../img/online-3.png') no-repeat top;
+}
+
 .online__slider {
   display: none;
 }
