--- a/assets/templates/forex/sass/blocks/trading.scss
+++ b/assets/templates/forex/sass/blocks/trading.scss
@@ -12,19 +12,19 @@
 }
 
 .trading__img {
-  width: 100%;
+  width: 70%;
   height: 430px;
-  background: url("../img/trading-bg.png") no-repeat;
-  background-size: cover;
+  background: url('../img/trading-bg.png') no-repeat center;
+  background-size: contain;
 }
 
 .trading__text {
   display: flex;
-  // justify-content: flex-end;
+  justify-content: center;
+  height: 100%;
   
   & p {
-    width: 600px;
-    padding-right: 100px;
+    width: 30%;
     text-align: center;
     opacity: 0.7;
   }
