--- a/assets/templates/forex/sass/blocks/trading.scss
+++ b/assets/templates/forex/sass/blocks/trading.scss
@@ -1,5 +1,5 @@
 .trading {
-  min-height: 550px;
+  // min-height: 550px;
 }
 
 .trading__title {
@@ -21,10 +21,11 @@
 .trading__text {
   display: flex;
   justify-content: center;
-  height: 100%;
+  padding-bottom: 80px;
   
   & p {
     width: 30%;
+    padding-top: 130px;
     text-align: center;
     opacity: 0.7;
   }
@@ -38,5 +39,18 @@
 }
 
 @media screen and ($mobile-widths) {
+  .trading__text {
+    flex-direction: column;
+    
+    & p {
+      width: auto;
+      padding-top: 0;
+    }
+  }
   
+  .trading__img {
+    width: auto;
+    background: url('../img/trading-bg.png') no-repeat center;
+    background-size: contain;
+  }
 }
