--- a/assets/templates/forex/index.html
+++ b/assets/templates/forex/index.html
@@ -87,11 +87,11 @@
           <p>Discover and copy the top traders<br>from all over the world</p>
           <a href="#">Read More</a>
         </div>
-        <div class="online__box">
+        <!-- <div class="online__box">
           <b>Invest with the best!</b>
           <p>Discover and copy the top traders<br>from all over the world</p>
           <a href="#">Read More</a>
-        </div>
+        </div> -->
       </div>
       <!-- Slider on mobile -->
       <div class="online__slider">
