--- a/assets/templates/forex/sass/blocks/scroll.scss
+++ b/assets/templates/forex/sass/blocks/scroll.scss
@@ -1,6 +1,6 @@
 .scroll__first {
   min-height: 470px;
-  background: url("../img/scroll-f.png") no-repeat top;
+  background: url("../img/scroll-t.png") no-repeat top;
   background-size: cover;
   background-attachment: fixed;
 }
