--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -349,9 +349,8 @@ body {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: justify;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
   -ms-flex-wrap: wrap;
   flex-wrap: wrap;
   margin-top: 50px;
@@ -621,7 +620,7 @@ body {
 
 .scroll__first {
   min-height: 470px;
-  background: url("../img/scroll-f.png") no-repeat top;
+  background: url("../img/scroll-t.png") no-repeat top;
   background-size: cover;
   background-attachment: fixed; }
 
