--- a/assets/templates/forex/sass/blocks/online.scss
+++ b/assets/templates/forex/sass/blocks/online.scss
@@ -18,7 +18,7 @@
 
 .online__flex {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-wrap: wrap;
   margin-top: 50px;
   padding-bottom: 30px;
