--- a/assets/templates/forex/css/style.css
+++ b/assets/templates/forex/css/style.css
@@ -333,7 +333,7 @@ body {
     border: 1px solid #f2c318; } }
 
 .online h2 {
-  margin-top: 100px;
+  margin-top: 60px;
   margin-bottom: 20px;
   font-size: 35px;
   font-weight: bold;
@@ -410,8 +410,7 @@ body {
       border: 1px solid #2e2963; } }
 
 .global {
-  background: url("../img/global.png") no-repeat;
-  background-size: cover; }
+  background: url("../img/global.png") no-repeat; }
   .global p {
     margin-top: 0;
     color: white;
@@ -436,7 +435,7 @@ body {
 
 .global__title {
   margin: 0;
-  padding-top: 30px;
+  padding-top: 10px;
   color: white;
   font-size: 70px;
   font-weight: 100;
@@ -456,7 +455,7 @@ body {
 
 @media screen and (max-width: 1200px) {
   .global {
-    background-size: inherit; }
+    background-size: cover; }
   .global__box {
     padding: 80px 0; }
   .global__title {
