--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -42,14 +42,14 @@
           <div class="title__box  title__box--bitcoin">
             <b>Bitcoin</b>
             <a href="#">Buy</a>
-            <p>438274982</p>
+            <p>₪53 675,7 per BTC</p>
           </div>
         </div>
         <div class="title__right">
           <div class="title__box  title__box--ethereum">
             <b>Ethereum</b>
             <a href="#">Buy</a>
-            <p>438274982</p>
+            <p>₪4 410,64 per ETH</p>
           </div>
         </div>
       </div>
@@ -59,16 +59,16 @@
     <div class="container">
       <div class="info__flex">
         <div class="info__left">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptate culpa, nulla perspiciatis consectetur quos ad asperiores expedita ex et eveniet aut iste explicabo laudantium ipsum! Nulla incidunt architecto dolor sapiente.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Esse aliquid, tenetur nisi culpa quis fugiat, fugit! Ex illum cupiditate tempore nesciunt, laboriosam omnis necessitatibus. Ipsam hic, asperiores placeat impedit maiores.</p>
+          <p>If you have a business and you wish to accept Bitcoin as a payment option, while keeping your books in Shekel Dollar or Euro, we offer a «Checkout with Bitcoin» service for stores and online stores.</p>
+          <p>If you have a business that needs to pay suppliers in Bitcoins, we have the perfect product for your business. Feel free to contact us, we will gladly help.</p>
         </div>
         <div class="info__center">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit asperiores veniam maxime nam deleniti saepe aut molestiae consectetur neque, repellat, quam quidem cum omnis fugiat optio. Exercitationem magni, consequuntur ratione?</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Repellendus maiores optio nisi, illum aut, qui reprehenderit iure perferendis neque placeat, quia enim similique! Fuga, provident neque distinctio hic aut rerum.</p>
+          <p>If you have a business and you wish to accept Bitcoin as a payment option, while keeping your books in Shekel Dollar or Euro, we offer a «Checkout with Bitcoin» service for stores and online stores.</p>
+          <p>If you have a business that needs to pay suppliers in Bitcoins, we have the perfect product for your business. Feel free to contact us, we will gladly help.</p>  
         </div>
         <div class="info__right">
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laboriosam tempore ut nulla omnis saepe odio fugit dignissimos maiores. Deleniti amet optio commodi cum, suscipit aspernatur rem architecto doloribus et. Itaque.</p>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minus non, praesentium, provident eveniet, nobis aliquam itaque officia voluptatum porro quia amet perspiciatis ullam iure fugiat unde delectus dignissimos. Dolore, a.</p>
+          <p>If you have a business and you wish to accept Bitcoin as a payment option, while keeping your books in Shekel Dollar or Euro, we offer a «Checkout with Bitcoin» service for stores and online stores.</p>
+          <p>If you have a business that needs to pay suppliers in Bitcoins, we have the perfect product for your business. Feel free to contact us, we will gladly help.</p>    
         </div>
       </div>
     </div>
