--- a/assets/templates/xm/sass/blocks/title.scss
+++ b/assets/templates/xm/sass/blocks/title.scss
@@ -19,7 +19,7 @@
 
 .title__flex {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   margin-top: -50px;
   padding-bottom: 50px;
 }
