--- a/assets/templates/xm/sass/global/base.scss
+++ b/assets/templates/xm/sass/global/base.scss
@@ -1,9 +1,10 @@
 body {
   min-width: 320px;
   margin: 0;
+  font-family: 'SF UI Text', 'Arial' sans-serif;
 }
 
 .container {
-  width: 1000px;
+  width: 1100px;
   margin: auto;
 }
