--- a/assets/templates/forex/sass/blocks/trading.scss
+++ b/assets/templates/forex/sass/blocks/trading.scss
@@ -2,6 +2,21 @@
   // min-height: 550px;
 }
 
+.trading__flex {
+  display: flex;
+  justify-content: space-around;
+  padding-top: 50px;
+  padding-bottom: 80px;
+  
+  & p {
+    width: 500px;
+    // padding-top: 130px;
+    align-self: center;
+    text-align: center;
+    opacity: 0.7;
+  }
+}
+
 .trading__title {
   margin-top: 60px;
   padding: 10px 50px;
@@ -12,23 +27,10 @@
 }
 
 .trading__img {
-  width: 70%;
+  width: 100%;
   height: 430px;
   background: url('../img/trading-bg.png') no-repeat center;
   background-size: contain;
-}
-
-.trading__text {
-  display: flex;
-  justify-content: center;
-  padding-bottom: 80px;
-  
-  & p {
-    width: 30%;
-    padding-top: 130px;
-    text-align: center;
-    opacity: 0.7;
-  }
 }
 
 @media screen and ($tablet-widths) {
@@ -39,8 +41,10 @@
 }
 
 @media screen and ($mobile-widths) {
-  .trading__text {
+  .trading__flex {
     flex-direction: column;
+    padding-top: 0;
+    padding-bottom: 0;
     
     & p {
       width: auto;
