--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -109,5 +109,26 @@
       </div>
     </div>
   </section>
+  <section class="business">
+    <div class="container">
+      <h3>For business</h3>
+      <p>If you have a business and you wish to accept Bitcoin as a payment option, while keeping your books in Shekel Dollar or Euro, we offer a «Checkout with Bitcoin» service for stores and online stores.<br><br>If you have a business that needs to pay suppliers in Bitcoins, we have the perfect product for your business. Feel free to contact us, we will gladly help.</p>
+    </div>
+  </section>
+  <section class="contact">
+    <div class="container">
+      <div class="contact__flex">
+        <input type="text" placeholder="E-Mail">
+        <input type="text" placeholder="Phone">
+        <button class="contact__btn" type="button" name="button">Contact Us</button>
+      </div>
+    </div>
+  </section>
+  <section class="media">
+    <div class="container">
+      <h3>Media Coverage</h3>
+      <div class="media__img"></div>
+    </div>
+  </section>
 </body>
 </html>
