--- a/assets/templates/xm/sass/style.scss
+++ b/assets/templates/xm/sass/style.scss
@@ -6,3 +6,6 @@
 @import 'blocks/info';
 @import 'blocks/traders';
 @import 'blocks/exchange';
+@import 'blocks/business';
+@import 'blocks/contact';
+@import 'blocks/media';
