--- a/assets/templates/xm/sass/blocks/business.scss
+++ b/assets/templates/xm/sass/blocks/business.scss
@@ -1,18 +1,20 @@
-.traders {
-  color: #fff;
-  background: #0038b8;
+.business {
   text-align: center;
+  background: #0038b8;
   
   & h3 {
     margin-top: 0;
     margin-bottom: 0;
     padding-top: 50px;
+    color: #fff;
     font-size: 30px;
     text-transform: uppercase;
   }
   
   & p {
+    margin-bottom: 0;
     padding-bottom: 50px;
+    color: #fff;
     font-weight: bold;
   }
 }
