--- a/assets/templates/xm/sass/blocks/exchange.scss
+++ b/assets/templates/xm/sass/blocks/exchange.scss
@@ -29,7 +29,8 @@
 }
 
 .exchange__flex--second {
-  justify-content: center;
+  justify-content: space-around;
+  padding-bottom: 100px;
 }
 
 .exchange__first,
@@ -73,17 +74,22 @@
 }
 
 .exchange__middle {
-  width: 150px;
-  // height: 139px;
+  width: 200px;
+  height: 139px;
   background: url('../img/ex-card.png') no-repeat top;
   background-size: cover;
 }
 
 .exchange__right {
+  font-weight: bold;
   text-align: right;
   text-transform: uppercase;
   
   & b {
     color: #0038b8;
+  }
+  
+  & p {
+    opacity: 0.7;
   }
 }
