--- a/assets/templates/xm/index.html
+++ b/assets/templates/xm/index.html
@@ -118,9 +118,15 @@
   <section class="contact">
     <div class="container">
       <div class="contact__flex">
-        <input type="text" placeholder="E-Mail">
-        <input type="text" placeholder="Phone">
-        <button class="contact__btn" type="button" name="button">Contact Us</button>
+        <div class="contact__left">
+          <input type="text" placeholder="E-Mail">
+        </div>
+        <div class="contact__center">
+          <input type="text" placeholder="Phone">
+        </div>
+        <div class="contact__right">
+          <button class="contact__btn" type="button" name="button">Contact Us</button>
+        </div>
       </div>
     </div>
   </section>
@@ -130,5 +136,32 @@
       <div class="media__img"></div>
     </div>
   </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__flex">
+        <div class="footer__box">
+          <b>Trade</b>
+          <a href="#">Buy</a>
+          <a href="#">Buy</a>
+          <a href="#">Buy</a>
+          <a href="#">Buy</a>
+        </div>
+        <div class="footer__box">
+          <b>Social</b>
+          <a href="#">Buy</a>
+          <a href="#">Buy</a>
+          <a href="#">Buy</a>
+          <a href="#">Buy</a>
+        </div>
+        <div class="footer__box">
+          <b>Resources</b>
+          <a href="#">Buy</a>
+          <a href="#">Buy</a>
+          <a href="#">Buy</a>
+          <a href="#">Buy</a>
+        </div>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
