--- a/assets/templates/xm/css/style.css
+++ b/assets/templates/xm/css/style.css
@@ -272,19 +272,32 @@ body {
     color: #fff;
     font-weight: bold; }
 
-.contact input {
-  width: 250px;
-  padding: 5px;
-  border: 1px solid gray;
-  border-radius: 5px; }
-
 .contact__flex {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-pack: distribute;
   justify-content: space-around;
+  -webkit-box-align: baseline;
+  -ms-flex-align: baseline;
+  align-items: baseline;
   padding: 100px 0; }
+
+.contact__left input,
+.contact__center input {
+  width: 250px;
+  padding: 5px;
+  border: 1px solid gray;
+  border-radius: 5px; }
+
+.contact__right button {
+  padding: 15px 40px;
+  color: #0038b8;
+  font-size: 16px;
+  font-weight: bold;
+  text-transform: uppercase;
+  border: none;
+  background: #f7c107; }
 
 .media h3 {
   margin-top: 0;
@@ -299,3 +312,36 @@ body {
   margin-top: -140px;
   padding-bottom: 100px;
   background: url("../img/media.png"); }
+
+.footer {
+  background: #0b1930; }
+
+.footer__flex {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  padding: 50px 0; }
+
+.footer__box {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column; }
+  .footer__box b {
+    margin-bottom: 20px;
+    color: #fff;
+    font-size: 18px;
+    font-weight: bold; }
+  .footer__box a {
+    margin-bottom: 5px;
+    color: #8d8a91;
+    text-decoration: none;
+    -webkit-transition: 0.3s;
+    transition: 0.3s; }
+    .footer__box a:hover {
+      color: #f7c107; }
