--- a/assets/templates/xm/css/style.css
+++ b/assets/templates/xm/css/style.css
@@ -140,7 +140,7 @@ body {
 .info {
   text-align: center; }
   .info p {
-    width: 350px;
+    width: 90%;
     font-weight: bold;
     opacity: 0.7; }
 
